change docker image

--- a/Elastic-POC/fluentd/conf/fluent.conf
+++ b/Elastic-POC/fluentd/conf/fluent.conf
@@ -9,15 +9,24 @@
   add_prefix ('')
   add_suffix ('')
 
-#   # Optionally, you can manage topic offset by using zookeeper
-#   # ruby-kafka consumer options
-  max_bytes     (1048576) :default => nil (Use default of ruby-kafka)
-  max_wait_time (5) :default => nil (Use default of ruby-kafka)
-  min_bytes     (1048576) :default => nil (Use default of ruby-kafka)
+# #   # Optionally, you can manage topic offset by using zookeeper
+# #   # ruby-kafka consumer options
+  # max_bytes     (1048576) :default => nil (Use default of ruby-kafka)
+  # max_wait_time (5) :default => nil (Use default of ruby-kafka)
+  # min_bytes     (1048576) :default => nil (Use default of ruby-kafka)
 #  @type dummy
 #   tag dummy
 #   dummy {"hello":"world"}
 </source>
 <match *.**>
-  @type stdout
+ @type elasticsearch
+    host elasticsearch
+    port 9200
+    logstash_format true
+    logstash_prefix fluentd
+    logstash_dateformat %Y%m%d
+    include_tag_key true
+    type_name access_log
+    tag_key @log_name
+    flush_interval 1s
 </match>
