--- a/Elastic-POC/docker-compose-fluentd.yml
+++ b/Elastic-POC/docker-compose-fluentd.yml
@@ -3,7 +3,9 @@ version: '3'
 networks:
   kafka-net:
     driver: bridge
-
+volumes:
+  data01:
+   driver: local
 services: 
   zookeeper-server:
     image: bitnami/zookeeper:latest
@@ -28,13 +30,38 @@ services:
   fluentd:
     build: .
     networks: 
-      - kafka-net
-    depends_on: 
-      - kafka
-    links: 
-      - kafka
+      - kafka-net    
     volumes:
       - ./fluentd/conf:/fluentd/etc
     ports:
       - 24224:24224
       - 24224:24224/udp
+    depends_on: 
+      - kafka
+    links:
+      - elasticsearch
+      - kafka
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
+    container_name: elasticsearch
+    environment:
+      discovery.type: single-node
+    volumes:
+      - data01:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - kafka-net
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.7.0
+    environment: 
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+    ports:
+      - 5601:5601
+    depends_on: 
+      - elasticsearch
+    links:
+      - elasticsearch
+    networks:
+      - kafka-net
