--- a/Elastic-POC/dockerfile
+++ b/Elastic-POC/dockerfile
@@ -1,5 +1,6 @@
 # fluentd/Dockerfile
- FROM fluent/fluentd
- USER root
- RUN ["gem", "install", "fluent-plugin-kafka"]
-#
+FROM fluent/fluentd:v1.6-debian-1
+USER root
+RUN ["gem", "install", "fluent-plugin-elasticsearch", "--no-document", "--version", "3.5.2"]
+RUN ["gem", "install", "fluent-plugin-kafka", "--no-document"]
+USER fluent
