--- a/Elastic-POC/docker-compose-fluentd2.yml
+++ b/Elastic-POC/docker-compose-fluentd2.yml
@@ -7,27 +7,25 @@ volumes:
   data01:
    driver: local
 services: 
-  zookeeper-server:
-    image: bitnami/zookeeper:latest
+  zookeeper:
+    image: 'confluentinc/cp-zookeeper:3.1.1'
+    container_name: zookeeper
     networks:
       - kafka-net
-    ports:
-      - 2181:2181
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      - ZOOKEEPER_CLIENT_PORT=2181
   kafka:
-    image: bitnami/kafka:latest
+    image: 'confluentinc/cp-kafka:3.1.1'
     container_name: kafka
     networks:
-      - kafka-net    
-    ports:
-      - 9092:9092
+      - kafka-net
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-server:2181
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
     depends_on:
-      - zookeeper-server
+      - zookeeper
+    ports:
+      - "9092:9092"
   fluentd:
     build: .
     networks: 
