--- a/Elastic-POC/dockerfile
+++ b/Elastic-POC/dockerfile
@@ -3,4 +3,5 @@ FROM fluent/fluentd:v1.6-debian-1
 USER root
 RUN ["gem", "install", "fluent-plugin-elasticsearch", "--no-document", "--version", "3.5.2"]
 RUN ["gem", "install", "fluent-plugin-kafka", "--no-document"]
+RUN ["gem","install","ruby-kafka", "--no-document"]
 USER fluent
