--- a/Elastic-POC/fluentd/conf/fluent.conf
+++ b/Elastic-POC/fluentd/conf/fluent.conf
@@ -1,22 +1,10 @@
 # fluentd/conf/fluent.conf
 <source>
  @type kafka
-
-  brokers kafka:9092
-  topics  message_logs
-  format (json)
-  message_key ('')
-  add_prefix ('')
-  add_suffix ('')
-
-# #   # Optionally, you can manage topic offset by using zookeeper
-# #   # ruby-kafka consumer options
-  # max_bytes     (1048576) :default => nil (Use default of ruby-kafka)
-  # max_wait_time (5) :default => nil (Use default of ruby-kafka)
-  # min_bytes     (1048576) :default => nil (Use default of ruby-kafka)
-#  @type dummy
-#   tag dummy
-#   dummy {"hello":"world"}
+    host localhost
+    port 9092
+    topics message_logs
+    format json
 </source>
 <match *.**>
  @type elasticsearch
