--- a/Elastic-POC/fluentd/conf/fluent.conf
+++ b/Elastic-POC/fluentd/conf/fluent.conf
@@ -1,10 +1,11 @@
 # fluentd/conf/fluent.conf
 <source>
  @type kafka
-    host localhost
+    host 192.168.1.6
     port 9092
-    topics message_logs
+    topics myLogger22
     format json
+    max_wait_time 8
 </source>
 <match *.**>
  @type elasticsearch
