--- a/Elastic-POC/fluentd/conf/fluent.conf
+++ b/Elastic-POC/fluentd/conf/fluent.conf
@@ -3,11 +3,11 @@
  @type kafka
     host 192.168.1.6
     port 9092
-    topics myLogger22
+    topics myLogger22,myLogger,log_excptions
     format json
     max_wait_time 8
 </source>
-<match *.**>
+<match myLogger22>
  @type elasticsearch
     host elasticsearch
     port 9200
@@ -18,4 +18,13 @@
     type_name access_log
     tag_key @log_name
     flush_interval 1s
+</match>
+<match log_excptions>
+  @type file
+  path ./logs/
+  <buffer>
+    timekey 1d
+    timekey_use_utc true
+    timekey_wait 10m
+  </buffer>
 </match>
